# claudep

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.cargo/: config.toml
.cursor/rules/: rust.mdc
.github/workflows/: ci.yml  release.yml
docker/: .env.example  Dockerfile  docker-compose.yml
docs/: development.md  mvp-roadmap.md
extension/: Cargo.toml  extension.toml
extension/src/: lib.rs
scripts/: check-zed-env.sh
src/: config.rs  docker.rs  lib.rs  main.rs  project_id.rs  state.rs  sync.rs  templates.rs
templates/: Dockerfile
